results/log/0617/err_293755.log
  File "/local/293755/main.py", line 203
    plt.plot(x_test[:, 0]t, errors_init, 'go-', label='Squared Error (Initial Params)')
                         ^
SyntaxError: invalid syntax
--------------------------------------------------------------------------
Primary job  terminated normally, but 1 process returned
a non-zero exit code. Per user-direction, the job has been aborted.
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun detected that one or more processes exited with non-zero status, thus causing
the job to be terminated. The first process to do so was:

  Process name: [[51161,1],0]
  Exit code:    1
--------------------------------------------------------------------------
cp: missing destination file operand after '*.png/home/yanw/uncertain/results/figures/0617'
Try 'cp --help' for more information.
cp: missing destination file operand after '/home/yanw/uncertain'
Try 'cp --help' for more information.
